# manga-image-translator

./: .gitignore  config.json  pyproject.toml  start_gui.bat  webserver.bat  用法说明.md
gui/: README.md  default_config.json  manga_translator_gui.py  run_gui.py  sample_config.json
manga_translator/: save.py
manga_translator/inpainting/: inpainting_lama_mpe.py
