[project]
name = "manga-image-translator"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10, <3.12"
license = "GPL-3.0-only"

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "networkx>=3.4.2",
    "groq>=0.23.1",
    "torch-summary>=1.4.5",
    "einops>=0.8.1",
    "scikit-image>=0.25.2",
    "opencv-python>=4.11.0.86",
    "pyclipper>=1.3.0.post6",
    "shapely>=2.1.0",
    "requests>=2.32.3",
    "cryptography>=44.0.2",
    "freetype-py>=2.5.1",
    "aiohttp>=3.11.18",
    "tqdm>=4.67.1",
    "deepl>=1.21.1",
    "imagehash>=4.3.2",
    "kornia>=0.8.0",
    "backports-cached-property>=1.0.2",
    "huggingface-hub>=0.30.2",
    "transformers>=4.51.3",
    "py3langid==0.2.2",
    "sentencepiece>=0.2.0",
    "editdistance>=0.8.1",
    "numpy==1.26.4",
    "tensorboardx>=2.6.2.2",
    "websockets>=14.2",
    "protobuf>=3.20.2,<6.0.0",
    "ctranslate2<=3.24.0",
    "colorama>=0.4.6",
    "openai==1.63.0",
    "tiktoken>=0.9.0",
    "httpx==0.27.2",
    "open-clip-torch>=2.32.0",
    "safetensors>=0.5.3",
    "pandas>=2.2.3",
    "onnxruntime>=1.21.1",
    "timm>=1.0.15",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.1.0",
    "nest-asyncio>=1.6.0",
    "marshmallow>=4.0.0",
    "cython>=3.0.12",
    "aioshutil>=1.5",
    "aiofiles>=24.1.0",
    "arabic-reshaper>=3.0.0",
    "pyhyphen>=4.0.4",
    "langcodes>=3.5.0",
    "manga-ocr>=0.1.14",
    "langdetect>=1.0.9",
    "pydensecrf",
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "uvicorn>=0.34.2",
    "fastapi>=0.115.12",
    "pydantic==2.5.0",
    "python-multipart>=0.0.20",
    "google-genai>=1.2.0",
    "rich>=14.0.0",
    "regex>=2024.11.6",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.0.0",
    "paddlepaddle-gpu>=2.6.2 ; sys_platform != 'darwin'",
    "pyside6>=6.9.0",
]

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 100
py_version = 310


[tool.pylint]
disable = """
C,R,W,
c-extension-no-member
"""
additional-builtins = "display"
output-format = "colorized"
generated-members = ["torch.*", "cv2.*"]

[tool.pytest.ini_options]
addopts = "-ra -v -p no:faulthandler"
minversion = "6.0"
testpaths = ["test"]




[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126/"
# Set explicit = true for the PyTorch index as well.
explicit = true

[tool.uv.sources]
"torch" = { index = "pytorch" }
"torchvision" = { index = "pytorch" }
"torchaudio" = { index = "pytorch" }
pydensecrf = { url = "https://github.com/lucasb-eyer/pydensecrf/archive/refs/heads/master.zip" }
